--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
-        background: #f5f5f5;
         margin: 0;
         padding: 0;
+        background: linear-gradient(to bottom, #ffffff, #000000); /* Gradient fon */
     }
     .container {
         max-width: 500px;
@@ -30,7 +30,7 @@
         font-size: 24px;
     }
     p {
-        color: #555;
+        color: #333;
         font-size: 15px;
         margin: 5px 0;
     }
