--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     h1 {
         margin: 15px 0 5px 0;
         font-size: 24px;
+        color: #fff; /* Gradient fon ustida o‘qilishi uchun oq rang */
     }
     p {
-        color: #333;
+        color: #ddd;
         font-size: 15px;
         margin: 5px 0;
     }
@@ -68,11 +69,14 @@
     <p>IT loyihalarni boshqarish</p>
     
     <!-- Linklar -->
-    <a class="link" href="https://t.me/ixtiyor9300" target="_blank">📲 Telegram</a>
-    <a class="link" href="https://instagram.com/ikhtiyor.sb" target="_blank">📷 Instagram</a>
-    <a class="link" href="https://welltech.uz/" target="_blank">🌐 Mening saytim</a>
-    <a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.nonbor.nonboruz" target="_blank">📱 NonBor — mijozlar uchun</a>
-    <a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.fitme" target="_blank">👕 FitMe — o‘zingizga mos kiyim oling</a>
+    <!-- Linklar -->
+<a class="link" href="tel:+998901234567">📞 Murojaat uchun: +998 90 123 45 67</a>
+<a class="link" href="https://t.me/ixtiyor9300" target="_blank">📲 Telegram</a>
+<a class="link" href="https://instagram.com/ikhtiyor.sb" target="_blank">📷 Instagram</a>
+<a class="link" href="https://welltech.uz/" target="_blank">🌐 Bizning sayt</a>
+<a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.nonbor.nonboruz" target="_blank">📱 NonBor barcha milliy taomlar</a>
+<a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.nonborbusiness" target="_blank">📱 NonBor biznes uchun</a>
+<a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.fitme" target="_blank">📱 FitMe o‘zingizga mosini tanlang</a>
 </div>
 </body>
 </html>
