--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
+        background: #f5f5f5;
         margin: 0;
         padding: 0;
-        background: linear-gradient(to bottom, #ffffff, #000000); /* Gradient fon */
     }
     .container {
         max-width: 500px;
@@ -28,10 +28,9 @@
     h1 {
         margin: 15px 0 5px 0;
         font-size: 24px;
-        color: #fff; /* Gradient fon ustida o‘qilishi uchun oq rang */
     }
     p {
-        color: #ddd;
+        color: #555;
         font-size: 15px;
         margin: 5px 0;
     }
@@ -69,14 +68,15 @@
     <p>IT loyihalarni boshqarish</p>
     
     <!-- Linklar -->
-    <!-- Linklar -->
-<a class="link" href="tel:+998901234567">📞 Murojaat uchun: +998 90 123 45 67</a>
-<a class="link" href="https://t.me/ixtiyor9300" target="_blank">📲 Telegram</a>
-<a class="link" href="https://instagram.com/ikhtiyor.sb" target="_blank">📷 Instagram</a>
-<a class="link" href="https://welltech.uz/" target="_blank">🌐 Bizning sayt</a>
-<a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.nonbor.nonboruz" target="_blank">📱 NonBor barcha milliy taomlar</a>
-<a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.nonborbusiness" target="_blank">📱 NonBor biznes uchun</a>
-<a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.fitme" target="_blank">📱 FitMe o‘zingizga mosini tanlang</a>
+    <a class="link" href="https://t.me/ixtiyor9300" target="_blank">📲 Telegram</a>
+    <a class="link" href="https://instagram.com/ikhtiyor.sb" target="_blank">📷 Instagram</a>
+    <a class="link" href="https://welltech.uz/" target="_blank">🌐 Bizning sayt</a>
+    <a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.nonbor.nonboruz" target="_blank">📱 NonBor barcha milliy taomlar</a>
+    <a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.nonborbusiness" target="_blank">📱 NonBor biznes uchun</a>
+    <a class="link" href="https://play.google.com/store/apps/details?id=uz.welltech.fitme" target="_blank">📱 FitMe o‘zingizga mosini tanlang</a>
 </div>
 </body>
 </html>
+``` ✅  
+
+Xohlasangiz, men bu kodni **gradient fon, ramka, animatsiya** bilan yanada chiroyli qilib berishim mumkin. Bunday qilaymi?
