--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     }
 
     /* Ranglar */
-    .phone { background: #007bff; }        /* ko‘k */
-    .telegram { background: #0088cc; }     /* Telegram ko‘ki */
+    .phone { background: #007bff; }       
+    .telegram { background: #0088cc; }    
     .instagram { 
       background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af, #515bd4);
     } /* Instagram gradient */
-    .nonbor { background: #28a745; }       /* yashil */
-    .fitme { background: #ff6600; }        /* to‘q sariq */
+    .nonbor { background: #28a745; }      
+    .fitme { background: #ff6600; }      
   </style>
 </head>
 <body>
@@ -77,3 +77,4 @@
   </div>
 </body>
 </html>
+
