--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     .instagram { 
       background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af, #515bd4);
     } /* Instagram gradient */
-    .nonbor { background: #28a745; }      
+    .nonbor { background: #FF6833; }      
     .fitme { background: #ff6600; }      
   </style>
 </head>
@@ -70,11 +70,13 @@
     <!-- Linklar -->
     <a class="link phone" href="tel:+998948679300" target="_blank">📲 Murojaat uchun telefon</a>
     <a class="link telegram" href="https://t.me/ixtiyor9300" target="_blank">📲 Telegram</a>
-    <a class="link instagram" href="https://instagram.com/ikhtiyor.sb" target="_blank">📷 Instagram</a>
+    <a class="link instagram" href="https://instagram.com/ikhtiyor.sb" target="_blank">📷 Instagram profilim</a>
+    <a class="link instagram" href="https://instagram.com/ikhtiyor.sb" target="_blank">📷 Nonbor Instagram profil</a>
     <a class="link nonbor" href="https://play.google.com/store/apps/details?id=uz.welltech.nonbor.nonboruz" target="_blank">📱 NonBor barcha milliy taomlar</a>
     <a class="link nonbor" href="https://play.google.com/store/apps/details?id=uz.welltech.nonborbusiness" target="_blank">📱 NonBor biznes uchun</a>
     <a class="link fitme" href="https://play.google.com/store/apps/details?id=uz.welltech.fitme" target="_blank">📱 FitMe o‘zingizga mosini tanlang</a>
   </div>
 </body>
 </html>
+
 
