--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       background: linear-gradient(45deg, #f58529, #dd2a7b, #8134af, #515bd4);
     } /* Instagram gradient */
     .nonbor { background: #FF6833; }      
-    .fitme { background: #ff6600; }      
+    .fitme { background: #9933FF; }      
   </style>
 </head>
 <body>
@@ -78,5 +78,6 @@
   </div>
 </body>
 </html>
+
 
 
