--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
     <img src="profil2.jpg" alt="Profil rasmi">
     <!-- Ism Familiya -->
     <h1>Suyunov Ixtiyor</h1>
+
+     <!-- So‘rovnoma (Google Form) -->
+    <a class="link form" href="https://docs.google.com/forms/d/e/1FAIpQLScQlSIxVAiK2cVLAn20mOoHK2HIRVUsd6VJkUeIXMbTCWKv1Q/viewform" target="_blank">
+      📝 So‘rovnomani to‘ldirish
+    </a>
+    
     <!-- Linklar -->
     <a class="link phone" href="tel:+998948679300" target="_blank">📲 Murojaat uchun telefon</a>
     <a class="link telegram" href="https://t.me/ixtiyor9300" target="_blank">📲 Telegram</a>
@@ -78,6 +84,7 @@
   </div>
 </body>
 </html>
+
 
 
 
